# sbson

./: README.md  spec.md
python/: j2s.py
python-refimpl/: encode.py  generate_test_vectors.py  phf.py  sbson_refimpl.py
rust/: Cargo.toml
rust/benches/: sbson_benches.rs
rust/pysbson/: Cargo.toml
rust/pysbson/src/: lib.rs
rust/sbson/: Cargo.toml
rust/sbson/benches/: sbson_benches.rs
rust/sbson/examples/: encode.rs
rust/sbson/src/: arc_cursor.rs  borrowed_cursor.rs  cached_map_cursor.rs  cursor.rs  lib.rs  pyo3.rs  raw_cursor.rs  serde.rs  serializer.rs
rust/sbson/src/serializer/: mod.rs  serde_json_integration.rs
rust/src/: arc_cursor.rs  borrowed_cursor.rs  cached_map_cursor.rs  lib.rs  raw_cursor.rs
test_vectors/: sanity.sbson
