[package]
name = "pysbson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sbson"
crate-type = ["cdylib"]

[dependencies]
sbson = { path = "../sbson", features = ["pyo3"] }
pyo3 = { version = "0.17.3", features = ["extension-module"] }

