[package]
name = "sbson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "serde"]
std = []
pyo3 = ["dep:pyo3", "std"]
serde = ["dep:serde"]

[dependencies]
memchr = { version = "2", default-features = false }
serde = { version = "1.0.145", features = ["derive"], optional = true }
pyo3 = { version = "0.17.3", optional = true }
phf_shared = "0.11.1"
serde_json = "1.0.91"
eytzinger = "1.1.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "sbson_benches"
harness = false

[profile.release]
debug = true
[profile.bench]
debug = true
